# handsfree

./: .gitignore  Package.swift  README.md  TESTING.md  install.sh  pyproject.toml
Sources/handsfree-audio-helper/: main.swift
bargein/: __init__.py  audio_helper.py  mcp_server.py  protocol.py  routing.py  service.py  session.py  tts.py  vad.py
bargein/tests/: test_audio_helper.py  test_fallback.py  test_protocol.py  test_service.py  test_session.py  test_vad.py
contracts/: voice-contracts.md
plans/: barge-in-report.md  barge-in-verify.md
scripts/: verify-bargein
shortcuts/: Talk to Claude.shortcut  talk-to-claude-source.plist
wakeword/: README.md  daemon.py  pyproject.toml
